Fixed card width on mobile

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -62,6 +62,8 @@ label.active {
 
 @media only screen and (max-width: 600px) {
     .grid-item {
+        margin: 0;
+        min-width: 50%;
         max-width: 100%;
     }
 
